ardupilot_ws/logs/my_ArduCopter/build.make.000.log
[35m[1mScanning dependencies of target copter_P_control[0m
[ 50%] [32mBuilding CXX object CMakeFiles/copter_P_control.dir/src/copter_P_control.cpp.o[0m
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:30:1: error: ‘float64’ does not name a type
 float64 a, b, x=0, y=0, theta = 0, alpha, LOS_dist;
 ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp: In function ‘void P_Control()’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:36:3: error: ‘LOS_dist’ was not declared in this scope
   LOS_dist = sqrt((a-x)*(a-x)+(b-y)*(b-y));
   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:36:20: error: ‘a’ was not declared in this scope
   LOS_dist = sqrt((a-x)*(a-x)+(b-y)*(b-y));
                    ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:36:22: error: ‘x’ was not declared in this scope
   LOS_dist = sqrt((a-x)*(a-x)+(b-y)*(b-y));
                      ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:36:32: error: ‘b’ was not declared in this scope
   LOS_dist = sqrt((a-x)*(a-x)+(b-y)*(b-y));
                                ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:36:34: error: ‘y’ was not declared in this scope
   LOS_dist = sqrt((a-x)*(a-x)+(b-y)*(b-y));
                                  ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:38:3: error: ‘alpha’ was not declared in this scope
   alpha = atan2((a-x),(b-y));
   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:40:3: error: ‘beta’ was not declared in this scope
   beta = phi - 3.14*theta/180.0;
   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:40:3: note: suggested alternative:
In file included from /usr/include/boost/math/special_functions/round.hpp:15:0,
                 from /opt/ros/kinetic/include/ros/time.h:58,
                 from /opt/ros/kinetic/include/ros/ros.h:38,
                 from /home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:20:
/usr/include/boost/math/special_functions/math_fwd.hpp:51:10: note:   ‘boost::math::beta’
          beta(RT1 a, RT2 b, RT3 x, const Policy& pol); // Beta function (3 arguments).
          ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:40:10: error: ‘phi’ was not declared in this scope
   beta = phi - 3.14*theta/180.0;
          ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:40:21: error: ‘theta’ was not declared in this scope
   beta = phi - 3.14*theta/180.0;
                     ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:46:3: error: ‘cout’ was not declared in this scope
   cout<<"\nAngle b/w LOS & orientation: "<<beta<<"\nLOS angle: "<<alpha<<"\nOrientation angle: "<<theta<<endl;
   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:46:3: note: suggested alternative:
In file included from /home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:19:0:
/usr/include/c++/5/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:46:106: error: ‘endl’ was not declared in this scope
   cout<<"\nAngle b/w LOS & orientation: "<<beta<<"\nLOS angle: "<<alpha<<"\nOrientation angle: "<<theta<<endl;
                                                                                                          ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:46:106: note: suggested alternative:
In file included from /usr/include/c++/5/iostream:39:0,
                 from /home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:19:
/usr/include/c++/5/ostream:590:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp: In function ‘void global_Callback(const ConstPtr&)’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:68:3: error: ‘x’ was not declared in this scope
   x = cordinate->latitude;
   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:69:3: error: ‘y’ was not declared in this scope
   y = cordinate->longitude;
   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp: In function ‘void compass_Callback(const ConstPtr&)’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:74:3: error: ‘theta’ was not declared in this scope
   theta = angle->data;
   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp: In function ‘int main(int, char**)’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:89:13: error: ‘a’ was not declared in this scope
   std::cin>>a;
             ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_ArduCopter/src/copter_P_control.cpp:91:13: error: ‘b’ was not declared in this scope
   std::cin>>b;
             ^
CMakeFiles/copter_P_control.dir/build.make:62: recipe for target 'CMakeFiles/copter_P_control.dir/src/copter_P_control.cpp.o' failed
make[2]: *** [CMakeFiles/copter_P_control.dir/src/copter_P_control.cpp.o] Error 1
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/copter_P_control.dir/all' failed
make[1]: *** [CMakeFiles/copter_P_control.dir/all] Error 2
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
